# GSAS-II

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  Absorb.py  CorrectionCode.instprm.sample  DefaultExpressions.txt  ElementTable.py  FitBkgTut.doc  FitBkgTut.htm  FitBkgTut_files.htm  FormFactors.py  G2AutoInt.py  G2cif.py  G2compare.py  G2importphase.py  G2importphase_CIF.py  G2importphase_GPX.py  G2importpwd_xye.py  G2importsfact.py  G2importsfact_CIF.py  G2powdercorrections.txt.sample  G2shapes.py  GSAS2.rsrc  GSASII.BAT  GSASII.py  GSASIIElem.py  GSASIIElemGUI.py  GSASIIIO.py  GSASIIIntPDFtool.py  GSASIIautoInt.py  GSASIIcomp.py  GSASIIconstrGUI.py  GSASIIctrlGUI.py  GSASIIctrls.py  GSASIIdata.py  GSASIIdataGUI.py  GSASIIddataGUI.py  GSASIIexprGUI.py  (+78 more)
.notes/: .linenoteplus
GSASII/: Absorb.py  ElementTable.py  FormFactors.py  G2.py  G2compare.py  G2shapes.py  GSASII.py  GSASIIElem.py  GSASIIElemGUI.py  GSASIIGUI.py  GSASIIIO.py  GSASIIIntPDFtool.py  GSASIIconstrGUI.py  GSASIIctrlGUI.py  GSASIIdata.py  GSASIIdataGUI.py  GSASIIddataGUI.py  GSASIIexprGUI.py  GSASIIfiles.py  GSASIIfpaGUI.py  GSASIIgroupGUI.py  GSASIIimage.py  GSASIIimgGUI.py  GSASIIindex.py  GSASIIlattice.py  GSASIIlog.py  GSASIImapvars.py  GSASIImath.py  GSASIImiscGUI.py  GSASIImpsubs.py  GSASIIobj.py  GSASIIpath.py  GSASIIphsGUI.py  GSASIIphsGUI2.py  GSASIIplot.py  GSASIIpwd.py  GSASIIpwdGUI.py  GSASIIpwdplot.py  GSASIIrestrGUI.py  GSASIIrmcGUI.py  (+39 more)
GSASII/Bilbao/: BCS_API.py  README.md  meson.build
GSASII/CifFile/: CifFile.py  StarFile.py  meson.build
GSASII/GUI/: GSASIIElemGUI.py  GSASIIGUI.py  GSASIIconstrGUI.py  GSASIIctrlGUI.py  GSASIIdataGUI.py  GSASIIddataGUI.py  GSASIIexprGUI.py  GSASIIfpaGUI.py  GSASIIimgGUI.py  GSASIImiscGUI.py  GSASIIphsGUI.py  GSASIIphsGUI2.py  GSASIIpwdGUI.py  GSASIIrestrGUI.py  GSASIIrmcGUI.py  GSASIIseqGUI.py  meson.build
GSASII/NIST_profile/: __init__.py  atan_windowed_FP_profile.py  meson.build  profile_functions_class.py
GSASII/PDFfit2/: AUTHORS.txt  LICENSE.txt
GSASII/PDFfit2/diffpy/: __init__.py
GSASII/config/: Substances.py  atmdata.py  defaultIparms.py  meson.build  tutorialIndex.py
GSASII/data/: ElementTable.py  FormFactors.py  atmdata.py  meson.build
GSASII/exports/: G2export_Bracket.py  G2export_CIF.py  G2export_FIT2D.py  G2export_JSON.py  G2export_PDB.py  G2export_csv.py  G2export_examples.py  G2export_image.py  G2export_map.py  G2export_pwdr.py  G2export_shelx.py  __init__.py  cif_core.cpickle  cif_pd.cpickle  meson.build  template_phase.cif  template_powder.cif  template_publ.cif  template_single.cif
GSASII/help/: 404.html  Tutorials.html  anchorIndex.txt  applicationwindow.html  cluster.html  commontreeitems.html  datatree.html  gsasII-phase.html  gsasII-pwdr.html  gsasII.html  image.html  index.html  mainmenu.html  others.html  pairdistribution.html  peaks.html  phaseRB.html  phaseRMC.html  phaseatoms.html  phasedata.html  phasedrawatoms.html  phasedrawopts.html  phasedysnomia.html  phasegeneral.html  phaseisodistort.html  phaselayers.html  phasemappeaks.html  phasemcsa.html  phaseoverview.html  phasepawley.html  phasetexture.html  phasewave.html  powder.html  powderbkg.html  powdercells.html  powdercomments.html  powderindexppeaks.html  powderinst.html  powderlimits.html  powderparent.html  (+9 more)
GSASII/icons/: gsas2.icns  meson.build
GSASII/imports/: G2img_1TIF.py  G2img_ADSC.py  G2img_CBF.py  G2img_CheMin.py  G2img_EDF.py  G2img_FabIO.py  G2img_GE.py  G2img_HDF5.py  G2img_MAR.py  G2img_PILTIF.py  G2img_Rigaku.py  G2img_SFRM.py  G2img_SumG2.py  G2img_pixirad_1ID_16bit.py  G2pdf_gr.py  G2phase.py  G2phase_CIF.py  G2phase_GPX.py  G2phase_INS.py  G2phase_RRUFF.py  G2phase_rmc6f.py  G2phase_xyz.py  G2pwd_BrukerBRML.py  G2pwd_BrukerRAW.py  G2pwd_CIF.py  G2pwd_FP.py  G2pwd_GPX.py  G2pwd_HDF5.py  G2pwd_MIDAS.py  G2pwd_Panalytical.py  G2pwd_csv.py  G2pwd_fxye.py  G2pwd_rigaku.py  G2pwd_xye.py  G2rfd_Panalytical.py  G2rfd_rigaku.py  G2rfd_xye.py  G2sad_xye.py  G2sfact.py  G2sfact_CIF.py  (+2 more)
GSASII/inputs/: BinariesCache.txt  OriginTemplate2.otpu  meson.build
GSASII/install/: git_filters.py  incr-mini-version.py  incr-minor-version.py  incr-version.py  macStartScript.py  makeBat.py  makeLinux.py  makeMacApp.py  makeVarTbl.py  save-versions.py  tag-version.py
GSASII/k_vec_solve/: k_vec_solve.py  sgtables.json
GSASII/pybaselines/: _banded_utils.py  optimizers.py
backcompat/: ElementTable.py  GSASIIElem.py  GSASIIElemGUI.py  GSASIIIntPDFtool.py  GSASIIconstrGUI.py  GSASIIctrlGUI.py  GSASIIdata.py  GSASIIdataGUI.py  GSASIIddataGUI.py  GSASIIexprGUI.py  GSASIIfiles.py  GSASIIfpaGUI.py  GSASIIimage.py  GSASIIimgGUI.py  GSASIIindex.py  GSASIIlattice.py  GSASIImapvars.py  GSASIImath.py  GSASIImiscGUI.py  GSASIImpsubs.py  GSASIIobj.py  GSASIIpath.py  GSASIIphsGUI.py  GSASIIplot.py  GSASIIpwd.py  GSASIIpwdGUI.py  GSASIIpwdplot.py  GSASIIrestrGUI.py  GSASIIsasd.py  GSASIIscriptable.py  GSASIIseqGUI.py  GSASIIspc.py  GSASIIstrIO.py  GSASIIstrMain.py  GSASIIstrMath.py  GSASIItestplot.py  meson.build
sources/: .gitignore  Makefile  SConstruct  convcell.f  fmask.c  histogram2d.for  histosigma2d.for  install.bat  install.sh  meson.build  pack_f.for  polymask.for  pydiffax.for  pypowder.for  pyspg.for  pytexture.for  spotmask.for  sysinstall.bat  sysinstall.sh  tagbinaries.py  unpack_cbf.for
sources/DIFFaXsubs/: DIFFaX.inc  DIFFaX.par  DIFFaXsubs.for
sources/INCLDS/: COPYRIGT.FOR
sources/NISTlatsubs/: CKPT02.f  DERIV.f  DOT.f  HMATRX.f  NORMAL.f  OUTPT1.f  OUTPT2.f  QMATRI.f  RD021.f  RD051.f  REDUCE.f  SHORTV.f  TRANS.f
sources/k_vec_cython/: kvec_general.c  kvec_general.cp310-win_amd64.pyd  kvec_general.pyx  meson.build  setup.py
sources/powsubs/: acosd.for  cosd.for  epsvoigt.for  expint.for  gauleg.for  gerfc.for  hfunc.for  lorentz.for  psvfcj.f90  psvfcjexpo.for  psvfcjo.for  psvoigt.for  tand.for
sources/spsubs/: genhkl.for  sglatc.for  sglcen.for  sgmtml.for  sgoprn.for  sgrmat.for  sgroupnp.for  sgtrcf.for
sources/texturesubs/: aplms.for  dgammln.for  factln.for  plmpsi.for  qlmn.for  qlmninit.for  sind.for
(+627 files in other folders)
