py.install_sources([
    '__init__.py',
    '__main__.py',
    'Absorb.py',
    'ElementTable.py',
    'FormFactors.py',
    'G2compare.py',
    'G2shapes.py',
    'GSASIIGUI.py',
    'GSASIIElem.py',
    'GSASIIElemGUI.py',
    # 'GSASIIIO.py',
    'GSASIImiscGUI.py',
    'GSASIIIntPDFtool.py',
    'GSASIIconstrGUI.py',
    'GSASIIctrlGUI.py',
    'GSASIIdata.py',
    'GSASIIdataGUI.py',
    'GSASIIddataGUI.py',
    'GSASIIexprGUI.py',
    'GSASIIfiles.py',
    'GSASIIfpaGUI.py',
    'GSASIIimage.py',
    'GSASIIimgGUI.py',
    'GSASIIindex.py',
    'GSASIIlattice.py',
    # 'GSASIIlog.py',
    'GSASIImapvars.py',
    'GSASIImath.py',
    'GSASIImpsubs.py',
    'GSASIIobj.py',
    'GSASIIpath.py',
    'GSASIIphsGUI.py',
    'GSASIIplot.py',
    'GSASIIpwd.py',
    'GSASIIpwdGUI.py',
    'GSASIIpwdplot.py',
    'GSASIIrestrGUI.py',
    'GSASIIsasd.py',
    'GSASIIscriptable.py',
    'GSASIIseqGUI.py',
    'GSASIIspc.py',
    'GSASIIstrIO.py',
    'GSASIIstrMain.py',
    'GSASIIstrMath.py',
    'GSASIItestplot.py',
    'ISODISTORT.py',
    'ImageCalibrants.py',
    'PlotXNFF.py',
    'ReadMarCCDFrame.py',
    'SUBGROUPS.py',
    'Substances.py',
    'atmdata.py',
    'config_example.py',
    'defaultIparms.py',
    'dmp.py',
    'fprime.py',
    'git_verinfo.py',
    'gltext.py',
    'k_vector_search.py',
    'nistlat.py',
    'scanCCD.py',
    'testDeriv.py',
    'testSSymbols.py',
    'testSytSym.py',
    'testXNFF.py',
    'tutorialIndex.py',
],
  pure: false,    # Will be installed next to binaries
  subdir: 'GSASII'  # Folder relative to site-packages to install to
)

subdir('NIST_profile')
subdir('imports')
subdir('exports')
subdir('icons')
subdir('inputs')
