py.install_sources([
    '__init__.py',
    '__main__.py',
    'Absorb.py',
    'ElementTable.py',
    'FormFactors.py',
    'G2compare.py',
    'G2shapes.py',
    'GUI/GSASIIGUI.py',
    'GSASIIElem.py',
    'GUI/GSASIIElemGUI.py',
    # 'GSASIIIO.py',
    'GUI/GSASIImiscGUI.py',
    'GSASIIIntPDFtool.py',
    'GUI/GSASIIconstrGUI.py',
    'GUI/GSASIIctrlGUI.py',
    'GSASIIdata.py',
    'GUI/GSASIIdataGUI.py',
    'GUI/GSASIIddataGUI.py',
    'GUI/GSASIIexprGUI.py',
    'GSASIIfiles.py',
    'GUI/GSASIIfpaGUI.py',
    'GSASIIimage.py',
    'GUI/GSASIIimgGUI.py',
    'GSASIIindex.py',
    'GSASIIlattice.py',
    # 'GSASIIlog.py',
    'GSASIImapvars.py',
    'GSASIImath.py',
    'GSASIImpsubs.py',
    'GSASIIobj.py',
    'GSASIIpath.py',
    'GUI/GSASIIphsGUI.py',
    'GUI/GSASIIphsGUI2.py',
    'GSASIIplot.py',
    'GSASIIpwd.py',
    'GUI/GSASIIpwdGUI.py',
    'GSASIIpwdplot.py',
    'GUI/GSASIIrmcGUI.py',
    'GUI/GSASIIrestrGUI.py',
    'GSASIIsasd.py',
    'GSASIIscriptable.py',
    'GUI/GSASIIseqGUI.py',
    'GSASIIspc.py',
    'GSASIIstrIO.py',
    'GSASIIstrMain.py',
    'GSASIIstrMath.py',
    'GSASIItestplot.py',
    'ISODISTORT.py',
    'ImageCalibrants.py',
    'PlotXNFF.py',
    'ReadMarCCDFrame.py',
    'SUBGROUPS.py',
    'Substances.py',
    'atmdata.py',
    'config_example.py',
    'defaultIparms.py',
    'dmp.py',
    'fprime.py',
    'git_verinfo.py',
    'gltext.py',
    'k_vector_search.py',
    'nistlat.py',
    'scanCCD.py',
    'tutorialIndex.py',
],
  pure: false,    # Will be installed next to binaries
  subdir: 'GSASII'  # Folder relative to site-packages to install to
)

subdir('NIST_profile')
subdir('imports')
subdir('exports')
subdir('icons')
subdir('inputs')
