py.install_sources([
    '__init__.py',
    '__main__.py',
    'Absorb.py',
    'G2compare.py',
    'G2shapes.py',
    'GSASIIElem.py',
    # 'GSASIIIO.py',
    'GSASIIIntPDFtool.py',
    'GSASIIdata.py',
    'GSASIIfiles.py',
    'GSASIIimage.py',
    'GSASIIindex.py',
    'GSASIIlattice.py',
    # 'GSASIIlog.py',
    'GSASIImapvars.py',
    'GSASIImath.py',
    'GSASIImpsubs.py',
    'GSASIIobj.py',
    'GSASIIpath.py',
    'GSASIIplot.py',
    'GSASIIpwd.py',
    'GSASIIpwdplot.py',
    'GSASIIsasd.py',
    'GSASIIscriptable.py',
    'GSASIIspc.py',
    'GSASIIstrIO.py',
    'GSASIIstrMain.py',
    'GSASIIstrMath.py',
    'GSASIItestplot.py',
    'ISODISTORT.py',
    'ImageCalibrants.py',
    'PlotXNFF.py',
    'ReadMarCCDFrame.py',
    'SUBGROUPS.py',
    'dmp.py',
    'fprime.py',
    'git_verinfo.py',
    'gltext.py',
    'k_vector_search.py',
    'nistlat.py',
    'scanCCD.py',
],
  pure: false,    # Will be installed next to binaries
  subdir: 'GSASII'  # Folder relative to site-packages to install to
)

subdir('NIST_profile')
subdir('imports')
subdir('exports')
subdir('icons')
subdir('inputs')
