py.install_sources([
    'GSASIIElem.py',
    'GSASIIElemGUI.py',
    'GSASIImiscGUI.py',
    'GSASIIIntPDFtool.py',
    'GSASIIconstrGUI.py',
    'GSASIIctrlGUI.py',
    'GSASIIdata.py',
    'GSASIIdataGUI.py',
    'GSASIIddataGUI.py',
    'GSASIIexprGUI.py',
    'GSASIIfiles.py',
    'GSASIIfpaGUI.py',
    'GSASIIimage.py',
    'GSASIIimgGUI.py',
    'GSASIIindex.py',
    'GSASIIlattice.py',
    'GSASIImapvars.py',
    'GSASIImath.py',
    'GSASIImpsubs.py',
    'GSASIIobj.py',
    'GSASIIpath.py',
    'GSASIIphsGUI.py',
    'GSASIIplot.py',
    'GSASIIpwd.py',
    'GSASIIpwdGUI.py',
    'GSASIIpwdplot.py',
    'GSASIIrestrGUI.py',
    'GSASIIsasd.py',
    'GSASIIscriptable.py',
    'GSASIIseqGUI.py',
    'GSASIIspc.py',
    'GSASIIstrIO.py',
    'GSASIIstrMain.py',
    'GSASIIstrMath.py',
    'GSASIItestplot.py',
    'ElementTable.py'
],
  pure: false,    # Will be installed next to binaries
  subdir: ''  # Folder relative to site-packages to install to
)
