py.install_sources([
  'CifFile.py',
  'StarFile.py',
  'TypeContentsParser.py',
  'YappsStarParser_1_0.py',
  'YappsStarParser_1_1.py',
  'YappsStarParser_2_0.py',
  'YappsStarParser_STAR2.py',
  '__init__.py',
  'parsetab.py',
  'yapps3_compiled_rt.py'
],
  pure: false,    # Will be installed next to binaries
  subdir: 'GSASII/CifFile'  # Folder relative to site-packages to install to
)
