py.install_sources([
    'GSASIIGUI.py',
    'GSASIIElemGUI.py',
    'GSASIImiscGUI.py',
    'GSASIIconstrGUI.py',
    'GSASIIctrlGUI.py',
    'GSASIIdataGUI.py',
    'GSASIIddataGUI.py',
    'GSASIIexprGUI.py',
    'GSASIIfpaGUI.py',
    'GSASIIimgGUI.py',
    'GSASIIphsGUI.py',
    'GSASIIphsGUI2.py',
    'GSASIIpwdGUI.py',
    'GSASIIrmcGUI.py',
    'GSASIIrestrGUI.py',
    'GSASIIseqGUI.py',
    ],
  pure: false,    # Will be installed next to binaries
  subdir: 'GSASII/GUI'  # Folder relative to site-packages to install to
)

