py.install_sources([
    'G2export_Bracket.py',
    'G2export_CIF.py',
    'G2export_FIT2D.py',
    'G2export_JSON.py',
    'G2export_PDB.py',
    'G2export_csv.py',
    'G2export_examples.py',
    'G2export_image.py',
    'G2export_map.py',
    'G2export_pwdr.py',
    'G2export_shelx.py',
    '__init__.py',
    'cif_core.cpickle',
    'cif_core.dic',
    'cif_pd.cpickle',
    'cif_pd.dic',
    'template_phase.cif',
    'template_powder.cif',
    'template_publ.cif',
    'template_single.cif',
    ],
  pure: false,    # Will be installed next to binaries
  subdir: 'GSASII/exports'  # Folder relative to site-packages to install to
)

