py.install_sources([
    'darrow.ico',
    'exarrow.ico',
    'eyarrow.ico',
    'gsas2.icns',
    'gsas2.ico',
    'gsas2.png',
    'gsas2mac.ico',
    'help.ico',
    'key.ico',
    'larrow.ico',
    'publish.ico',
    'rarrow.ico',
    'sxarrow.ico',
    'syarrow.ico',
    'uarrow.ico',

    ],
  pure: false,    # Will be installed next to binaries
  subdir: 'GSASII/icons'  # Folder relative to site-packages to install to
)

