py.install_sources([
    '__init__.py',
    'G2img_1TIF.py',
    'G2img_ADSC.py',
    'G2img_CBF.py',
    'G2img_CheMin.py',
    'G2img_EDF.py',
    'G2img_GE.py',
    'G2img_HDF5.py',
    'G2img_MAR.py',
    'G2img_PILTIF.py',
    'G2img_Rigaku.py',
    'G2img_SFRM.py',
    'G2img_SumG2.py',
    'G2img_pixirad_1ID_16bit.py',
    'G2pdf_gr.py',
    'G2phase.py',
    'G2phase_CIF.py',
    'G2phase_GPX.py',
    'G2phase_INS.py',
    'G2phase_rmc6f.py',
    'G2phase_xyz.py',
    'G2pwd_BrukerBRML.py',
    'G2pwd_BrukerRAW.py',
    'G2pwd_CIF.py',
    'G2pwd_FP.py',
    'G2pwd_GPX.py',
    'G2pwd_MIDAS.py',
    'G2pwd_Panalytical.py',
    'G2pwd_csv.py',
    'G2pwd_fxye.py',
    'G2pwd_rigaku.py',
    'G2pwd_xye.py',
    'G2rfd_Panalytical.py',
    'G2rfd_rigaku.py',
    'G2rfd_xye.py',
    'G2sad_xye.py',
    'G2sfact.py',
    'G2sfact_CIF.py',
    ],
  pure: false,    # Will be installed next to binaries
  subdir: 'GSASII/imports'  # Folder relative to site-packages to install to
)
